Add room posting/editing endpoints
Fixes some issues around how whispers were being handled/returned, as
well as a few miscellaneous small fixes in the edit code found by the
added tests.
